--- a/SeniorRA_thermstats_SOM.tex
+++ b/SeniorRA_thermstats_SOM.tex
@@ -163,7 +163,7 @@
 
 \begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
 
-Rebecca A. Senior\textsuperscript{1}*, Jane K. Hill\textsuperscript{2} and David P. Edwards\textsuperscript{1}
+Rebecca A. Senior\textsuperscript{1}*§, Jane K. Hill\textsuperscript{2} and David P. Edwards\textsuperscript{1}
 
 \textsuperscript{1}Department of Animal and Plant Sciences, Alfred Denny Building, University of Sheffield, Western Bank, Sheffield, S10 2TN, UK
 
@@ -171,7 +171,9 @@ Rebecca A. Senior\textsuperscript{1}*, Jane K. Hill\textsuperscript{2} and David
 
 *\textbf{Corresponding author:} \href{mailto:rebecca.a.senior@gmail.com}{\nolinkurl{rebecca.a.senior@gmail.com}}, +44(0)114 2220123 (R.A. Senior)
 
-\textbf{ORCID iDs:} orcid.org/0000-0002-8208-736X (R.A. Senior); orcid.org/0000-0003-1871-7715 (J.K. Hill)
+§ Present address: Woodrow Wilson School of Public and International Affairs, Princeton University, Princeton, New Jersey 08544 USA
+
+\textbf{ORCID iDs:} 0000-0002-8208-736X (R.A. Senior); 0000-0003-1871-7715 (J.K. Hill); 0000-0001-8562-3853 (D.P. Edwards)
 
 \pagebreak
 \raggedright
