Adding missing reference to Fig1
Signed-off-by: Rebecca A. Senior <rebecca.a.senior@gmail.com>

--- a/SeniorRA_thermstats_ms.Rmd
+++ b/SeniorRA_thermstats_ms.Rmd
@@ -155,7 +155,7 @@ We illustrate the utility of our package using temperature data for the island o
 
 Surface temperature measurements at high spatial resolution can easily be collected in the field using a handheld thermal camera. We used a FLIR model E40 camera, which costs ~US$4,000, weighs 825 g, and takes 19,200 measurements (160 x 120 pixels) in a single photo  [@flir_manual_2016; @scheffers_extreme_2017]. Various other models exist, including the smaller and more affordable FLIR ONE smartphone attachment at ~US$300, 34.5 g and a resolution of 80 x 60 pixels. While FLIR cameras appear to be the most widely used it should be noted that other brands are available, such as Optris and testo. Currently `ThermStats` cannot directly extract data from other camera models, but readers are welcome to request enhancements via GitHub (https://github.com/rasenior/ThermStats/issues).
 
-As with any field study, the sampling design should aim to achieve sufficient coverage over the study area and over time, such that the images are representative samples of the treatments of interest.  For example, a single image of the ground from 1 m away encompasses an area of 0.9 x 1.1 m (1 pixel &cong; 0.5 cm^2^) using a FLIR E40 camera [@flir_manual_2016], and so it may be necessary to take multiple photos in different cardinal directions and at different times of day to effectively represent the temperature of a study plot [@scheffers_extreme_2017; @senior_tropical_2018].  
+As with any field study, the sampling design should aim to achieve sufficient coverage over the study area and over time, such that the images are representative samples of the treatments of interest.  For example, a single image of the ground from 1 m away encompasses an area of 0.9 x 1.1 m (1 pixel &cong; 0.5 cm^2^) using a FLIR E40 camera [@flir_manual_2016], and so it may be necessary to take multiple photos in different cardinal directions and at different times of day to effectively represent the temperature of a study plot [Figure \@ref(fig:fig-1); @scheffers_extreme_2017; @senior_tropical_2018].  
 
 Before any data are collected, we recommend users familiarise themselves with the technology [for a thorough review, see @tattersall_infrared_2016]. There are various sources of the infrared radiation detected by a thermal camera, but we want to focus only on the radiation emitted by the object or scene of interest, which is a function of its temperature. The amount of radiation emitted by a particular object, for a given temperature, depends on its emissivity. A perfect blackbody has an emissivity of 1, while surfaces that an ecologist is likely to photograph typically have an emissivity from 0.92 [for dry, bare soil; @flir_manual_2016] to 0.99 [for green broadleaf forest; @snyder_classification-based_1998].  Additionally, the temperature and relative humidity of the atmosphere and the distance between the object and the camera will affect (1) the amount of emitted radiation that is absorbed by the atmosphere and (2) the amount of background radiation, with some of this also being reflected by the object (reflected apparent temperature).
 
