Adding in Scheffers et al. 2017 ref, which is cited in a code chunk
Signed-off-by: Rebecca A. Senior <rebecca.a.senior@gmail.com>

--- a/SeniorRA_thermstats_SOM.Rmd
+++ b/SeniorRA_thermstats_SOM.Rmd
@@ -18,7 +18,9 @@ documentclass: article
 link-citations: yes
 csl: methods-in-ecology-and-evolution.csl
 biblio-style: apalike
-bibliography: [refs.bib]
+bibliography: refs.bib
+nocite: | 
+  @scheffers_extreme_2017
 ---
 
 ```{r knitr-setup, include=FALSE}
