--- a/SeniorRA_thermstats_SOM.tex
+++ b/SeniorRA_thermstats_SOM.tex
@@ -403,6 +403,9 @@ McGarigal, K., Cushman, S. A., \& Ene, E. (2012). FRAGSTATS v4: Spatial pattern 
 \leavevmode\hypertarget{ref-mcguire_achieving_2016}{}%
 McGuire, J. L., Lawler, J. J., McRae, B. H., \& Theobald, D. M. (2016). Achieving climate connectivity in a fragmented landscape. \emph{Proceedings of the National Academy of Sciences}, \emph{113}(26), 7195--7200. doi:\href{https://doi.org/10.1073/pnas.1602817113}{10.1073/pnas.1602817113}
 
+\leavevmode\hypertarget{ref-scheffers_extreme_2017}{}%
+Scheffers, B. R., Edwards, D. P., Macdonald, S. L., Senior, R. A., Andriamahohatra, L. R., Roslan, N., \ldots{} Williams, S. E. (2017). Extreme thermal heterogeneity in structurally complex tropical rain forests. \emph{Biotropica}, \emph{49}(1), 35--44. doi:\href{https://doi.org/10.1111/btp.12355}{10.1111/btp.12355}
+
 \leavevmode\hypertarget{ref-shi_framework_2016}{}%
 Shi, H., Wen, Z., Paull, D., \& Guo, M. (2016). A framework for quantifying the thermal buffering effect of microhabitats. \emph{Biological Conservation}, \emph{204}, 175--180. doi:\href{https://doi.org/10.1016/j.biocon.2016.11.006}{10.1016/j.biocon.2016.11.006}
 
